[gd_scene format=3 uid="uid://cfctqbm4sum1y"]

[ext_resource type="Script" uid="uid://bbb8ds038wdwq" path="res://scripts/main/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://d173wutt6c3x" path="res://scenes/board_editor_v_2.tscn" id="1_o5qli"]

[sub_resource type="LabelSettings" id="LabelSettings_0wfyh"]
font_size = 89

[node name="Main" type="Node2D" unique_id=1298295548]
script = ExtResource("1_0wfyh")
board_editor_scene = ExtResource("1_o5qli")

[node name="UIContainer" type="Control" parent="." unique_id=740018827]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="SceneContainer" type="Node2D" parent="." unique_id=1322314173]

[node name="MainMenu" type="Control" parent="." unique_id=568900891]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MainMenu" unique_id=1774567999]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1504.0
offset_bottom = 1000.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer" unique_id=31136421]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MainMenu/CenterContainer/VBoxContainer" unique_id=1729138976]
layout_mode = 2
text = "Catan"
label_settings = SubResource("LabelSettings_0wfyh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreateRoomButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer" unique_id=1799787077]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "CREATE ROOM"

[node name="JoinRoomButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer" unique_id=1687609308]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "JOIN ROOM"

[node name="LocalGameButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer" unique_id=1162228965]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "LOCAL GAME"

[node name="BoardEditorButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer" unique_id=939568857]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "BOARD EDITOR"

[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/CreateRoomButton" to="." method="_on_create_room_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/JoinRoomButton" to="." method="_on_join_room_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/LocalGameButton" to="." method="_on_local_game_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/BoardEditorButton" to="." method="_on_board_editor_button_pressed"]
